--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.log
 *.lot
 *.fls
-*.out
+# *.out
 *.toc
 *.fmt
 *.fot
@@ -24,7 +24,7 @@
 # *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+# .pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
